monitoring/controllers/base/grafana/loki/compactor.yaml
# loki/compactor.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki-compactor
spec:
  replicas: 1
  serviceName: loki-compactor
  selector:
    matchLabels:
      app: loki
      component: compactor
  template:
    metadata:
      labels:
        app: loki
        component: compactor
    spec:
      containers:
      - name: loki
        image: grafana/loki:3.4.3
        imagePullPolicy: IfNotPresent
        args:
        - -target=compactor
        - -config.file=/etc/loki/merged-loki.yaml
        - -config.expand-env=true
        ports:
        - containerPort: 3100
          name: http
        - containerPort: 9095
          name: grpc
        volumeMounts:
          - name: merged-config
            mountPath: /etc/loki # The same writable volume where merged-loki.yaml is created
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: lgtm-s3-secrets
          secret:
            secretName: lgtm-s3-secret
        - name: loki-secrets
          secret:
            secretName: loki-secret
        - name: merged-config
          emptyDir: {}  # This ensures a writable volume for the init container and Loki container to share
---
apiVersion: v1
kind: Service
metadata:
  name: loki-compactor
spec:
  ports:
  - port: 3100
    name: http
  selector:
    app: loki
    component: compactor
