monitoring/controllers/base/grafana/loki/ingester.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki-ingester
spec:
  replicas: 3
  serviceName: loki-ingester
  selector:
    matchLabels:
      app: loki
      component: ingester
  template:
    metadata:
      labels:
        app: loki
        component: ingester
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.9.0
        imagePullPolicy: IfNotPresent
        args:
        - -target=ingester
        - -config.file=/etc/loki/merged-loki.yaml  # Use the S3 config for ingesters
        - -config.expand-env=true
        ports:
          - containerPort: 3100
            name: http
          - containerPort: 9095
            name: grpc
        volumeMounts:
          - name: merged-config
            mountPath: /etc/loki # The same writable volume where merged-loki.yaml is created
          - name: loki-wal
            mountPath: /tmp/loki/wal  # Optional: WAL data can use emptyDir or a small local disk
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: lgtm-s3-secrets
          secret:
            secretName: lgtm-s3-secret
        - name: loki-secrets
          secret:
            secretName: loki-secret
        - name: merged-config
          emptyDir: {}  # This ensures a writable volume for the init container and Loki container to share
        - name: loki-wal
          emptyDir: {}  # Optional: Use emptyDir for WAL if you don't need persistent storage for it
---
apiVersion: v1
kind: Service
metadata:
  name: loki-ingester
spec:
  ports:
  - port: 3100
    name: http
  - port: 9095
    name: grpc
  clusterIP: None
  selector:
    app: loki
    component: ingester
