monitoring/controllers/base/grafana/loki/memberlist.yaml
# loki/memberlist.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-memberlist
spec:
  ports:
  - port: 7946
    name: memberlist
  selector:
    app: loki
