monitoring/controllers/base/grafana/loki/ingress-patch.yaml
# loki/ingress-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: observability
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER_LOKI_ENDPOINT`)
      priority: 10
      services:
        - kind: Service
          name: loki-gateway
          namespace: observability
          passHostHeader: true
          port: 3100
          responseForwarding:
            flushInterval: 1ms
  tls:
    secretName: loki-tls
